# multithreaded-chatserver-cpp20

./: .gitignore  CMakeLists.txt  README.md
include/: SelectServer.hpp  TcpMultiServer.hpp  TcpServer.hpp
include/ClientAuthInc/: Client.hpp  client_handler.hpp  room_manager.hpp  server.hpp
src/: SelectServer.cpp  TcpMultiServer.cpp  TcpServer.cpp  helper.cpp  main.cpp
src/ClientAuthSrc/: Client.cpp  client_handler.cpp  room_manager.cpp  server.cpp
